Refactoring product repository   - Secure the integrity of created Feature and Product objects   - merge feature repository in product repository   - fix input file for loading inmemory product repository